--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1636,3 +1636,8 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+
+		.pdfobject-container {
+			width: 100%;
+   			height: 500px;
+		}
